*Empty MediaWiki Message*

--- a/Ingano.mw
+++ b/Ingano.mw
@@ -8,5 +8,8 @@ Nyuma, mu myaka ya 1950 icyo gihingwa cyaje kurekwa kubera ibura ry’isoko ndet
 
 N’ubwo gifite akamaro kanini, ubugunduke bw’ubutaka, indwara n’ibindi byonnyi bituma umusaruro utiyongera.
 
+== Imiyoboro ==
+*[http://www.isar.rw/spip.php?article150 ISAR Porogaramu y’ingano]
+
 [[Category:Ibimera]]   
 [[Category:Ubuhinzi]]
