*Empty MediaWiki Message*

--- a/Ingano.mw
+++ b/Ingano.mw
@@ -13,3 +13,24 @@ N’ubwo gifite akamaro kanini, ubugunduke bw’ubutaka, indwara n’ibindi byon
 
 [[Category:Ibimera]]   
 [[Category:Ubuhinzi]]
+
+[[bg:Зимна пшеница]]
+[[da:Brød-Hvede]]
+[[de:Weichweizen]]
+[[en:Common wheat]]
+[[es:Triticum aestivum]]
+[[fa:مکسیپک]]
+[[fi:Vehnä]]
+[[hsb:Prawa pšeńca]]
+[[hu:Közönséges búza]]
+[[it:Triticum aestivum]]
+[[ka:რბილი ხორბალი]]
+[[li:Terf]]
+[[lmo:Triticum aestivum]]
+[[lt:Paprastasis kvietys]]
+[[nl:Gewone tarwe]]
+[[pcd:Fourmint]]
+[[pl:Pszenica zwyczajna]]
+[[scn:Ciaca]]
+[[sq:Gruri]]
+[[sv:Vete]]
