--- a/Icyayi.mw
+++ b/Icyayi.mw
@@ -16,6 +16,7 @@ Icyayi cyatangiye guhingwa mu Rwanda muri 1952. Kuva icyo gihe, umusaruro wacyo 
 Icyayi gihingwa mu mabanga y’imisozi miremire ku butumburuke buri hagati ya m 1,900 na m 2,500, no mu bibaya byumukije neza ku butumburuke hagati ya m 1,550 na m 1,800. Icyayi gihingwa mu turere 11. Ku buso bwa ha 12,500 mu majyaruguru, iburengerazuba no mu ntara y’amajyepfo. Icyayi kigomba guhingwa hafi y’inganda zigitunganya kuko kigomba kujya gutunganyirizwa mu ruganda nyuma y’amasaha make kimaze gusoromwa. 
 
 == Imiyoboro ==
+*[http://www.isar.rw/spip.php?article147 ISAR Porogaramu y’Icyayi]
 * [http://www.minagri.gov.rw/index.php?option=com_content&view=category&layout=blog&id=117&Itemid=18&lang=rw www.minagri.gov.rw]
 * [http://www.orinfor.gov.rw/printmedia/news.php?type=rw&volumeid=58&cat=4&storyid=1834 www.orinfor.gov.rw]
 
