*Empty MediaWiki Message*

--- a/Ikawa.mw
+++ b/Ikawa.mw
@@ -1,4 +1,5 @@
 [[File:A small cup of coffee.JPG|thumb|250px|<font color="green">Ikawa</font>]]
+[[File:FruitColors.jpg|thumb|250px|<font color="grey">Ikawa</font>]]
 
 '''Ikawa'''
 
