*Empty MediaWiki Message*

--- a/Ikawa.mw
+++ b/Ikawa.mw
@@ -3,6 +3,10 @@
 
 '''Ikawa'''
 
+Ikawa yageze mu [[Rwanda]] ahagana mu mwaka wa 1900, ariko ubushakashatsi kuri iki gihingwa bwatangiye mu mwaka 1930 ubwo hageragezwaga imbuto zitandukanye z’ikawa zivuye muri Mulungu ([[Repubulika Iharanira Demokarasi ya Kongo]]).
+
+Ikawa ubu ifata umwanya wa kabiri mu bihingwa nyuma y’icyayi mu kwinjiza amadovize ariko ihura n’ibibazo by’ibyonnyi n’indwara, uburyo bwo guhinga budatunganye n’imbuto zidafite umusaruro uhagije.
+
 Kunywa ikawa bigira rukuruzi yo gutera [[kanseri]] yo mu ruhago, yo mu mabere, cyangwa ibiturugunyu (''tumeur'') ni utubyimba tubanziriza kanseri.
 
 == Ikawa na Indwara ya diyabete ==
@@ -14,6 +18,9 @@ Bakaba banavuga ko ari byiza ku bamaze kurwara diyabete kunywa ikawa kuko ifasha
 
 ==  Notes  == 
 <references/>  
+
+== Imiyoboro ==
+[http://www.isar.rw/spip.php?article148 ISAR Porogaramu y’Ikawa]
 
 [[Category:Ibinyobwa]] 
 
