--- a/Ikawa.mw
+++ b/Ikawa.mw
@@ -20,7 +20,7 @@ Bakaba banavuga ko ari byiza ku bamaze kurwara diyabete kunywa ikawa kuko ifasha
 <references/>  
 
 == Imiyoboro ==
-[http://www.isar.rw/spip.php?article148 ISAR Porogaramu y’Ikawa]
+*[http://www.isar.rw/spip.php?article148 ISAR Porogaramu y’Ikawa]
 
 [[Category:Ibinyobwa]] 
 
