*Empty MediaWiki Message*

--- a/Umusigiti_wa_Sultanahmet.mw
+++ b/Umusigiti_wa_Sultanahmet.mw
@@ -2,4 +2,20 @@
 
 '''Umusigiti wa Sultanahmet''' (izina mu [[kinyaturukiya]] : ''Sultanahmet Camii'') ni [[umusigiti]] muri [[Turukiya]].
 
+== Amafoto ==
+<gallery>
+Image:Istanbul.Sultanahmet.BlueMosque.jpg|
+Image:Blaue moschee 6minarette.jpg|  
+Image:Istanbul-Sultan-Ahmet-Camii.jpg|
+Image:Sultan Ahmed Mosque2.jpg|
+Image:Blue mosque2.jpg| 
+Image:Blekitny Meczet RB1.jpg|
+Image:Sultan Ahmed Mosque 02.JPG|
+Image:Sultan Ahmed Mosque 01.JPG|
+Image:Turquie - Istanbul - Mosquee bleue - interieur.jpg| 
+Image:Blekitny Meczet RB3.jpg|
+Image:SultanAhmetMosqueInterior.jpg|
+Image:SultanAhmetMosqueCourtyard.jpg|
+</gallery>
+
 [[Category:Imisigiti]]
