*Empty MediaWiki Message*

--- a/Umusigiti_wa_Sultanahmet.mw
+++ b/Umusigiti_wa_Sultanahmet.mw
@@ -19,3 +19,52 @@ Image:SultanAhmetMosqueCourtyard.jpg|
 </gallery>
 
 [[Category:Imisigiti]]
+
+[[ace:Meuseujid Sultan Ahmad]]
+[[af:Sultan Ahmet-moskee]]
+[[ar:جامع السلطان أحمد]]
+[[az:Sultan Əhməd camisi]]
+[[bg:Султан Ахмед джамия]]
+[[bn:সুলতান আহমেদ মসজিদ]]
+[[ca:Mesquita blava]]
+[[cs:Mešita Sultan Ahmed]]
+[[cy:Mosg Glas]]
+[[de:Sultan-Ahmed-Moschee]]
+[[el:Μπλε Τζαμί]]
+[[en:Sultan Ahmed Mosque]]
+[[eo:Blua moskeo]]
+[[es:Mezquita Azul]]
+[[eu:Meskita Urdina]]
+[[fa:مسجد سلطان احمد]]
+[[fi:Sulttaani Ahmedin moskeija]]
+[[fr:Mosquée bleue]]
+[[he:המסגד הכחול]]
+[[hr:Ahmedija]]
+[[hu:Ahmed szultán mecsetje]]
+[[id:Masjid Sultan Ahmed]]
+[[it:Moschea Blu]]
+[[ja:スルタンアフメト・モスク]]
+[[jv:Masjid Biru]]
+[[ka:სულთან აჰმედის მეჩეთი]]
+[[ko:술탄 아흐메트 모스크]]
+[[lv:Sultāna Ahmeda mošeja]]
+[[mk:Султан Ахмедова џамија]]
+[[mr:सुल्तान अहमद मशीद]]
+[[ms:Masjid Sultan Ahmed]]
+[[nl:Sultan Ahmetmoskee]]
+[[no:Sultan Ahmed-moskeen]]
+[[pl:Błękitny Meczet]]
+[[pnb:سلطان احمد مسجد]]
+[[pt:Mesquita Azul]]
+[[ro:Moscheea Albastră din Istanbul]]
+[[ru:Голубая мечеть]]
+[[simple:Sultan Ahmed Mosque]]
+[[sl:Modra mošeja]]
+[[sr:Sultan Ahmedova džamija]]
+[[sv:Blå moskén, Istanbul]]
+[[tt:Солтан Әхмәт мәчете]]
+[[ug:سۇلتان ئاخمەت جامىي]]
+[[uk:Блакитна мечеть (Стамбул)]]
+[[ur:سلطان احمد مسجد]]
+[[vi:Nhà thờ Hồi giáo Sultan Ahmed]]
+[[zh:蘇丹艾哈邁德清真寺]]
