*Empty MediaWiki Message*

--- a/Umusigiti_wa_Sultanahmet.mw
+++ b/Umusigiti_wa_Sultanahmet.mw
@@ -1,4 +1,5 @@
 [[File:Sultan Ahmed Mosque Istanbul Turkey retouched.jpg|thumb|250px|<font color="grey">Umusigiti wa Sultanahmet</font>]]
+[[File:Sultan Ahmed Mosque, Istambul.jpg|thumb|250px|<font color="grey">Umusigiti wa Sultanahmet</font>]]
 
 '''Umusigiti wa Sultanahmet''' (izina mu [[kinyaturukiya]] : ''Sultanahmet Camii'') ni [[umusigiti]] muri [[Turukiya]].
 
