--- a/Umusigiti_wa_Sultanahmet.mw
+++ b/Umusigiti_wa_Sultanahmet.mw
@@ -1,7 +1,7 @@
 [[File:Sultan Ahmed Mosque Istanbul Turkey retouched.jpg|thumb|250px|<font color="grey">Umusigiti wa Sultanahmet</font>]]
 [[File:Sultan Ahmed Mosque, Istambul.jpg|thumb|250px|<font color="grey">Umusigiti wa Sultanahmet</font>]]
 
-'''Umusigiti wa Sultanahmet''' (izina mu [[kinyaturukiya]] : ''Sultanahmet Camii'') ni [[umusigiti]] muri [[Turukiya]].
+'''Umusigiti wa Sultanahmet''' (izina mu [[kinyaturukiya]] : ''Sultanahmet Camii'') ni [[umusigiti]] i [[Istanbul]] muri [[Turukiya]].
 
 == Amafoto ==
 <gallery>
