--- a/Amagambo_ahinnye.mw
+++ b/Amagambo_ahinnye.mw
@@ -112,6 +112,7 @@
 == P ==
 *'''PPC''' [[Ishyaka ry’Iterambere n’Ubusabane]]
 * '''PRSP''' Inyandiko ikubiyemo ingamba z’igihugu zo kurwanya ubukene
+* '''PSR''' [[Ishyaka ry’Abakozi mu Rwanda]] (''Parti socialiste rwandais'')
 
 == R ==
 * '''RADA''' [[Ikigo gishinzwe guteza imbere ubuhinzi]]
