--- a/Amagambo_ahinnye.mw
+++ b/Amagambo_ahinnye.mw
@@ -110,7 +110,8 @@
 * '''ORTPN ''' [[Ofisi y'Igihugu y'Ubukerarugendo na Pariki]]
 
 == P ==
-*'''PPC''' [[Ishyaka ry’Iterambere n’Ubusabane]]
+* '''PL''' [[Ishyaka ry’Ukwishyira Ukizana]] (''Parti libéral'')
+* '''PPC''' [[Ishyaka ry’Iterambere n’Ubusabane]]
 * '''PRSP''' Inyandiko ikubiyemo ingamba z’igihugu zo kurwanya ubukene
 * '''PSR''' [[Ishyaka ry’Abakozi mu Rwanda]] (''Parti socialiste rwandais'')
 
