--- a/Amagambo_ahinnye.mw
+++ b/Amagambo_ahinnye.mw
@@ -113,7 +113,7 @@
 * '''PL''' [[Ishyaka ry’Ukwishyira Ukizana]] (''Parti libéral'')
 * '''PPC''' [[Ishyaka ry’Iterambere n’Ubusabane]]
 * '''PRSP''' Inyandiko ikubiyemo ingamba z’igihugu zo kurwanya ubukene
-* '''PSP''' [[Ishyaka ry’Ubwisungane Bugamije Iterambere]] (''Parti de la Solidarité et du Progrès / mu cyongereza « Party for Solidarity and Progress'')
+* '''PSP''' [[Ishyaka ry’Ubwisungane Bugamije Iterambere]] (''Parti de la Solidarité et du Progrès / Party for Solidarity and Progress'')
 * '''PSR''' [[Ishyaka ry’Abakozi mu Rwanda]] (''Parti socialiste rwandais'')
 
 == R ==
