--- a/Amagambo_ahinnye.mw
+++ b/Amagambo_ahinnye.mw
@@ -111,7 +111,7 @@
 
 == P ==
 * '''PL''' [[Ishyaka ry’Ukwishyira Ukizana]] (''Parti libéral'')
-* '''PPC''' [[Ishyaka ry’Iterambere n’Ubusabane]]
+* '''PPC''' [[Ishyaka ry’Iterambere n’Ubusabane]] (''Parti pour le Progrès et la Concorde / Party for Progress and Concord'')
 * '''PRSP''' Inyandiko ikubiyemo ingamba z’igihugu zo kurwanya ubukene
 * '''PSP''' [[Ishyaka ry’Ubwisungane Bugamije Iterambere]] (''Parti de la Solidarité et du Progrès / Party for Solidarity and Progress'')
 * '''PSR''' [[Ishyaka ry’Abakozi mu Rwanda]] (''Parti socialiste rwandais'')
