*Empty MediaWiki Message*

--- a/Ishyaka_FDU-Inkingi.mw
+++ b/Ishyaka_FDU-Inkingi.mw
@@ -1,3 +1,3 @@
-'''Ishyaka FDU-Inkingi''' (izina mu gifaransa : ''Forces Démocratiques Unifiées'' na izina mu [[cyongereza]]: ''United Democratic Forces - Inkingi'') ni [[ishyaka rya politiki]] mu [[Rwanda]].
+'''Ishyaka FDU-Inkingi''' (izina mu [[gifaransa]] : ''Forces Démocratiques Unifiées'' na izina mu [[cyongereza]]: ''United Democratic Forces - Inkingi'') ni [[ishyaka rya politiki]] mu [[Rwanda]].
 
 [[Category:Amashyaka ya politiki mu Rwanda]]
