*Empty MediaWiki Message*

--- a/Ishyaka_FPR-Inkotanyi.mw
+++ b/Ishyaka_FPR-Inkotanyi.mw
@@ -7,6 +7,7 @@ Leta iyobowe na FPR yashyizeho iminsi mikuru – Umunsi w’ Intwari (1 Gashyant
 [[cs:Rwandská vlastenecká fronta]]
 [[da:Rwandas Patriotiske Front]]
 [[de:Ruandische Patriotische Front]]
+[[en:Rwandan Patriotic Front]]
 [[es:Frente Patriótico Ruandés]]
 [[fr:Front patriotique rwandais]]
 [[id:Front Patriotik Rwanda]]
