*Empty MediaWiki Message*

--- a/Ku_wa_gatanu.mw
+++ b/Ku_wa_gatanu.mw
@@ -1,4 +1,4 @@
-'''Ku wa gatanu''' (izina mu Cyongereza ''Friday'' ;  izina mu Gifaransa ''Vendredi'' )
+'''Ku wa gatanu''' (izina mu [[cyongereza]] ''Friday'' ;  izina mu [[gifaransa]] ''Vendredi'' )
 
 [[Category:Iminsi y'imibyizi]]
 
