*Empty MediaWiki Message*

--- a/Pariki_ya_Nyungwe.mw
+++ b/Pariki_ya_Nyungwe.mw
@@ -1,6 +1,7 @@
 [[File:Nyungw.jpg|thumb|250px|<font color="green">Pariki ya Nyungwe</font>]]
 
-'''Pariki ya Nyungwe'''
+'''Pariki ya Nyungwe''' cyangwa '''Pariki Nasiyonali ya Nyungwe''' ni ishyamba cyimeza riri mu majyepfo y’iburasirazuba bw’u [[Rwanda]] kandi riri hejuru y’inkombe z’ikiyaga cya Kivu. Iryo shyamba rifatanye na Pariki Nasiyonali ya Kibira yo mu gihugu cy’u Burundi kandi rishobora kuba ari ryo shyamba ry’inzitane ryo mu misozi minini kandi miremire muri Afurika yose ; ryari rifite ubuso bwa km² 924 mu mwaka w’i 2000. Iryo shyamba riri mu misozi ifite m 1600 na m 2950 kandi ririmo amoko menshi y’ibimera abana n’amoko anyuranye y’inyamaswa ; agizwe ahanini n’inyoni n’ingunge. Ishyamba cyimeza rya Nyungwe ni kimwe mu bigega by’amazi y’u Rwanda: ritanga hafi 60% by’amazi y’u Rwanda. Ikindi kandi isoko ry’uruzi rwa Nili iri muri iryo shyamba.
+
 [[File:Smit.Cercopithecus L'Hoesti.jpg|thumb|left|100px|<font color="green">Icyondi</font>]]
 
 Amakuru dukesha RDG avuga ko iyi Pariki ya Nyungwe ifite ubuso bungana na [[kilometerokare]] hafi 1000, mu misozi y’agahebuzo yo mu majyepfo y’u [[Rwanda]], Pariki ya Nyungwe ni ishyamba rirusha ayandi ubugari mu mashyamba yo mu misozi mu karere ka [[Afurika]] y’Iburasirazuba no hagati; akaba ari nayo yabayeho mbere y’izindi yahereye mu gihe cyiswe icy’[[Ubutita]] (''ice age''). Ni igice gikize mu runyurane, rw’[[ibimera]], ishyamba rigizwe n’amoko arenga 200 y’ibiti, n’urwunge rw’ibiti by’indabyo harimo n’igiti cy’inganzamarumbo lobelia n’izindi zitatse amabara menshi.
