--- a/Pariki_y’Igihugu_y’Ibirunga.mw
+++ b/Pariki_y’Igihugu_y’Ibirunga.mw
@@ -1,7 +1,7 @@
 [[File:Gorilla mother and baby at Volcans National Park.jpg|thumb|250px|<font color="grey">Pariki y’Igihugu y’Ibirunga</font>]]
 [[File:Rwandan children at Volcans National Park.jpg|thumb|250px|<font color="grey">Pariki y’Igihugu y’Ibirunga</font>]]
 
-'''Pariki y’Igihugu y’Ibirunga'''<ref>[http://news.igihe.org/ubukerarugendo_news.php?groupid=2&news_cat_id=2&news_id=9092 Amateka n’ imiterere bya Pariki y’Igihugu y’Ibirunga]</ref> cyangwa  '''Pariki y’Ibirunga'''<ref>[http://www.rwandagateway.org/rw/spip.php?article56 Amapariki]</ref>, '''Pariki y’Ibirunga y’u Rwanda'''<ref>[http://www.rwandagateway.org/rw/spip.php?article625 Ingagi zo mu Birunga zariyongereye]</ref> . Pariki iri mu majyaruguru y'[[uburengerazuba]] bw'u Rwanda. Iyi Pariki ni nayo ibonekamo [[Ingagi zo mu misozi]] (''cyangwa'' zo mu birunga). Yemejwe bwa mbere mu mwaka wa 1925. Muri icyo gihe yari agace gato hagati y’ibirunga bya Kalisimbi, Bisoke na Mikeno. Niyo [[pariki]] nkuru y’igihugu yashinzwe bwa mbere muri [[Afurika]].
+'''Pariki y’Igihugu y’Ibirunga'''<ref>[http://news.igihe.org/ubukerarugendo_news.php?groupid=2&news_cat_id=2&news_id=9092 Amateka n’ imiterere bya Pariki y’Igihugu y’Ibirunga]</ref> cyangwa  '''Pariki y’Ibirunga'''<ref>[http://www.rwandagateway.org/rw/spip.php?article56 Amapariki]</ref>, '''Pariki y’Ibirunga y’u Rwanda'''<ref>[http://www.rwandagateway.org/rw/spip.php?article625 Ingagi zo mu Birunga zariyongereye]</ref>, '''Pariki Nasiyonali y’Ibirunga'''. Pariki iri mu majyaruguru y'[[uburengerazuba]] bw'u Rwanda. Iyi Pariki ni nayo ibonekamo [[Ingagi zo mu misozi]] (''cyangwa'' zo mu birunga). Yemejwe bwa mbere mu mwaka wa 1925. Muri icyo gihe yari agace gato hagati y’ibirunga bya Kalisimbi, Bisoke na Mikeno. Niyo [[pariki]] nkuru y’igihugu yashinzwe bwa mbere muri [[Afurika]].
 
 [[File:BlueMonkey.jpg|thumb|left|200px|<font color="green">Inkima</font>]]
 
