*Empty MediaWiki Message*

--- a/Pariki_y’Igihugu_y’Ibirunga.mw
+++ b/Pariki_y’Igihugu_y’Ibirunga.mw
@@ -30,6 +30,8 @@ Hagaragara kandi igisambu cy’ibyatsi binini ndetse n’icy’ibito, ishyamba r
 
 Mu rwego rw’ isi, iyi pariki izwi cyane ku ngagi zo mu misozi (''Gorilla beringei''). Izindi nyamaswa z’inyamabere zigaragara muri iyi pariki ni: Inguge zo mu bwoko bwa [[inkima]]  (''Cercopithecus mitis kandti''); [[inzovu]] (''Syncerus caffer''); impyisi z’amabara zo mu bwoko bwa ''Crocuta'' na [[impongo]] (''Tragelaphus scriptus''). Iyi pariki kandi irimo inzovu n’ubwo ari nke. Harimo amoko 178 y’[[inyoni]], byibura 13 muri yo na 16 y’ibisanira byayo akaba ari yo aboneka cyane mu birunga no mu misozi ya Rwenzori. 
 
+Muri Pariki Nasiyonali y’Ibirunga usangamo 245 y’[[ibimera]] harimo amoko 13 ya zirinzwe mu rwego mpuzamahanga, 115 y’[[inyamaswa]] zonsa harimo Ingagi zo mu misozi zirenze 650, amoko 187 y’[[inyoni]], amoko 27 y’[[ibikururanda]] n’[[imitubu]], n’amoko 33 y’[[udukoko]].
+
 ==  Notes  == 
 <references/>
 
