--- a/Pariki_ya_Nyungwe.mw
+++ b/Pariki_ya_Nyungwe.mw
@@ -24,6 +24,8 @@ Nyungwe irushaho kuba agahebuzo kubera inguge zayo. Muri rusange zirimo amoko 13
 
 Ukinjira muri Parike ya Nyungwe usanganirwa n’umwuka mwiza uhehereye, akayaga gatuje gaherekejwe n’utujwi tw’inyoni n’impumuro nziza y’indabyo ziganje muri iyo Parike, wakebuka hiryo hino ugahuza amaso n’utunyamanswa twiza cyane duteye ubwuzu bityo ukumva wakomeza kwihera ijisho.
 
+Mu ishyamba rya Nyungwe uhasanga amoko 1250 y’[[ibimera]] harimo amoko 50 y’[[ibishihe]], amoko 133 ya « Orchidées » indabo z’agahebuzo, amoko 275 y’[[inyoni]] (orchidées : indabo z’agahebuzo harimo amoko 24 gakondo).
+
 == Imiyoboro ==
 *[http://news.igihe.org/ubukerarugendo_news.php?groupid=2&news_cat_id=40&news_id=9291 Pariki ya Nyungwe igaragaramo amoko y’inguge (chimpanzees) agera kuri 13]
 *[http://news.igihe.org/ubukerarugendo_news.php?groupid=2&news_cat_id=2&news_id=9182 Ibiti birindwi bitangaje biboneka muri Pariki ya Nyungwe]
