*Empty MediaWiki Message*

--- a/Amagambo_ahinnye.mw
+++ b/Amagambo_ahinnye.mw
@@ -25,7 +25,7 @@
 * '''CI''' [[Abaguzi Mpuzamahanga]] (''Consumers International'') 
 * '''CIEL''' [[Ikigo Gishinzwe Amategeko Mpuzamahanga Arengera Ibidukikije]] (''Center for International Environmental Law'')
 * '''CMAC''' [[Isoko ry’Imari n’Imıgabane]] 
-* '''COMESA''' [[Umuryango w’Isoko Rusange ry’Ibihugu by’Afurika y’Iburasirazuba n’iy’Amajyepfo]]
+* '''COMESA''' [[Umuryango w’Isoko Rusange ry’Ibihugu by’Afurika y’Iburasirazuba n’iy’Amajyepfo]] cyangwa Umuryango w’ubuhahirane bw’ibihugu by’Afurika y’iburasirazuba n’amajyepfo 
 * '''CRC''' Uburyo bukoreshwa mu kugaragaza uko umuturage yishimira serivisi ahabwa
 * '''CSC''' Uburyo abaturage bishyize hamwe bagaragaza uko bishimira serivisi bahabwa
 * '''CSO''' [[Sosiyete sivile]]
@@ -45,6 +45,7 @@
 
 == F ==
 *'''FAD''' [[Ikigega Nyafurika Gitsura Amajyambere]] ( ''Fonds Africain de Développement'' )
+*'''FAO''' [[Umuryango w’Abibumbye ryita ku Biribwa n’Ubuhinzi]] 
 * '''FOEI'''
 
 == G ==
@@ -68,6 +69,9 @@
 
 == J ==
 * '''JADF''' Ihuriro ry’imiryango igamije iterambere
+
+== K ==
+*'''KIST''' [[Ishuri Rikuru rya Kigali ry’Ubumenyi, Ikoranabuhanga n’Icungamari]]
 
 == L ==
 * '''LG''' Inzego z’Ibanze
@@ -107,7 +111,8 @@
 * '''OMS''' Umuryango w’abibumbye wita ku buzima 
 * '''ONU''' [[Umuryango w’Abibumye]]
 * '''ORINFOR''' [[Ikigo cy’Igihugu gishinzwe Itangazamakuru]]
-* '''ORTPN ''' [[Ofisi y'Igihugu y'Ubukerarugendo na Pariki]]
+* '''ORN''' [[Ikigo cy’Igihugu cy’Ubuziranenge]]
+* '''ORTPN ''' [[Ikigo cy’Igihugu cy’Ubukererugendo na Pariki Nasiyonali]] cyangwa Ofisi y'Igihugu y'Ubukerarugendo na Pariki
 
 == P ==
 * '''PL''' [[Ishyaka ry’Ukwishyira Ukizana]] (''Parti libéral'')
@@ -134,8 +139,10 @@
 
 == U ==
 * '''UN''' cyangwa '''UNO''' [[Umuryango w’Abibumye]] (''United Nations'' cyangwe ''United Nations Organization'' )
-*'''UNHCR'''  Ishami ry’ishirahamwe mpuzamakungu rijejwe impunzi
-* '''UNİCEF''' Umuryango w’abibumye ryita ku bana ''cyangwa'' Ishami ry’ishirahamwe mpuzamakungu rijejwe abana
+* '''UNDP''' [[Ishami ry’Umuryango w’Abibumbye ryita ku Majyambere]] 
+* '''UNEP''' [[Ishami ry’Umuryango w’Abibumbye ryita ku Bidukikije]]
+* '''UNHCR'''  Ishami ry’ishirahamwe mpuzamakungu rijejwe impunzi
+* '''UNICEF''' [[Ishami ry’Umuryango w’Abibumbye ryita ku Burezi n’Abana]] ''cyangwa'' Umuryango w’Abibumye ryita ku bana , Ishami ry’ishirahamwe mpuzamakungu rijejwe abana
 
 == V ==
 * '''VAT''' Umusoro ku Nyongeragaciro
