*Empty MediaWiki Message*

--- a/Abatutsi.mw
+++ b/Abatutsi.mw
@@ -2,7 +2,7 @@
 
 '''Abatutsi''' ni ubwoko bw'u [[Rwanda]] no mu [[Burundi]].
 
-Abatutsi bivugwa ko aribo baje nyuma mu karere k’ibiyaga bigari. N’aborozi b’inka bakaba ari 14% b’abatuye u Rwanda n’uburundi. Bagaragaraga nk’imfura bakaba banashoboye gutegeka akarere igihe kirekire bakanakundwa n’[[abadage]] n’ababiligi (abacoloni). <ref>[http://www.kituochakatiba.org/index2.php?option=com_docman&task=doc_view&gid=1199&Itemid=36 Ugushakisha Ukuri n’Ubumuntu, Kituo Cha Katiba, Nyakanga, 2004 – Gashyantare, 2006] </ref>
+Abatutsi bivugwa ko aribo baje nyuma mu karere k’ibiyaga bigari. N’aborozi b’inka bakaba ari 14% b’abatuye u Rwanda n’uburundi. Bagaragaraga nk’imfura bakaba banashoboye gutegeka akarere igihe kirekire bakanakundwa n’[[abadage]] n’[[ababiligi]] (''abacoloni''). <ref>[http://www.kituochakatiba.org/index2.php?option=com_docman&task=doc_view&gid=1199&Itemid=36 Ugushakisha Ukuri n’Ubumuntu, Kituo Cha Katiba, Nyakanga, 2004 – Gashyantare, 2006] </ref>
 
 ==  Notes  == 
 <references/>  
