--- a/Amagambo_ahinnye.mw
+++ b/Amagambo_ahinnye.mw
@@ -8,6 +8,7 @@
 * '''AU''' [[Umuryango w'Ubumwe bw'Afurika]]
 
 == B ==
+* '''BADEA''' [[Banki y’Abarabu Itsura Amajyambere muri Afurika]] (''Bank for Economic Development in Africa'')
 * '''BHR''' [[Banki y’Imiturire y’u Rwanda]] 
 * '''BK''' [[Banki ya Kigali]]
 * '''BPR''' [[Banki y'Abaturage y'u Rwanda]] (''Banque Populaire du Rwanda'')
