--- a/Amagambo_ahinnye.mw
+++ b/Amagambo_ahinnye.mw
@@ -64,6 +64,7 @@
 * '''IFG''' [[Forumu Mpuzamahanga ku Ikomatanyabukungu]] (''International Forum on Globalisation'')
 * '''IISD''' [[Ikigo Mpuzamahanga Giharanira Amajyambere Arambye]] (''International Institute for Sustainable Development'')
 * '''IMF''' [[Ikigega Mpuzamahanga cy’Imari]] (International Monetary Fund)
+* '''IRDP''' [[Ikigo cy’Ubushakashatsi n’Ubusabane bigamije Amahoro]] (''Institut de Recherche et de Dialogue pour la Paix'')
 * '''IRST''' [[Ikigo cy’Ubushakashatsi mu by’Ubumenyi n’Ikoranabuhanga]]
 * '''ISAR''' [[Ubushakashatsi mu buhinzi n’ubworozi]] (''Institut des Sciences Agronomiques du Rwanda'')
 * '''IUCN''' Abishyize Hamwe Bashinzwe Kubungabunga Isi (''International Union for Conservation of Nature'')
