--- a/Umuryango_w’Ubumwe_bw’Ibihugu_by’i_Burayi.mw
+++ b/Umuryango_w’Ubumwe_bw’Ibihugu_by’i_Burayi.mw
@@ -1,7 +1,7 @@
 [[File:Flag of Europe.svg|thumb|250px|<font color="green">Ibendera ry’Umuryango w’Ubumwe bw’Ibihugu by’i Burayi</font>]]
 [[File:EU Globe No Borders.svg|thumb|250px|<font color="green">Ikarita y’Umuryango w’Ubumwe bw’Ibihugu by’i Burayi</font>]]
 
-'''Umuryango w’Ubumwe bw’Ibihugu by’i Burayi''' (EU mu magambo ahinnye y’icyongereza; izina mu [[cyongereza]]: ''European Union'')
+'''Umuryango w’Ubumwe bw’Ibihugu by’i Burayi''' cyangwa '''Umuryango w’Ubumwe bw’u Burayi''' (EU mu magambo ahinnye y’icyongereza; izina mu [[cyongereza]]: ''European Union'')
 
 [[Category:Umuryango w’Ubumwe bw’Ibihugu by’i Burayi| ]]
 
