*Empty MediaWiki Message*

--- a/Abdullah_Gül.mw
+++ b/Abdullah_Gül.mw
@@ -2,6 +2,8 @@
 
 '''Abdullah Gül''' ([[29 Ukwakira]] [[1950]] &ndash; ), [[Perezida]] wa [[Abaperezida ba Turukiya|11]] wa Repubulika ya [[Turukiya]].
 
+Yavukiye i [[Kayseri]] muri Turukiya taliki ya 29 Ukwakira 1950.
+
 [[Category:Abaperezida ba Turukiya]]
 [[Category:Abaperezida]] 
 [[Category:Abagabo]]
