robot Ajoute: [[en:Hotel Rwanda]]

--- a/Hotel_Rwanda.mw
+++ b/Hotel_Rwanda.mw
@@ -11,22 +11,23 @@ Rusesabagina ni wa munyarwanda uvugwa muri '''Filimi yitwa Hotel Rwanda''' aho b
 [[cs:Hotel Rwanda]]
 [[da:Hotel Rwanda]]
 [[de:Hotel Ruanda]]
+[[en:Hotel Rwanda]]
 [[es:Hotel Rwanda]]
+[[fi:Hotelli Ruanda]]
 [[fr:Hotel Rwanda]]
 [[gl:Hotel Rwanda]]
-[[id:Hotel Rwanda]]
-[[it:Hotel Rwanda]]
 [[he:מלון רואנדה]]
 [[hu:Hotel Ruanda]]
-[[nl:Hotel Rwanda]]
+[[id:Hotel Rwanda]]
+[[it:Hotel Rwanda]]
 [[ja:ホテル・ルワンダ]]
+[[nl:Hotel Rwanda]]
 [[no:Hotel Rwanda]]
 [[pl:Hotel Ruanda]]
 [[pt:Hotel Ruanda]]
 [[ru:Отель «Руанда»]]
-[[sq:Hotel Rwanda]]
 [[sl:Hotel Ruanda]]
-[[fi:Hotelli Ruanda]]
+[[sq:Hotel Rwanda]]
 [[sv:Hotel Rwanda]]
 [[ta:கொட்டல் ருவாண்டா]]
 [[te:హోటల్ రువాండా]]
