--- a/Amasezerano_Mpuzamahanga_yo_Kurengera_Ibimera.mw
+++ b/Amasezerano_Mpuzamahanga_yo_Kurengera_Ibimera.mw
@@ -1,9 +1,10 @@
 '''Amasezerano Mpuzamahanga yo Kurengera Ibimera''' (IPPC mu magambo ahinnye y’[[icyongereza]]; izina mu [[cyongereza]]: ''International Plant Protection Convention'' ) ni amasezerano yemejwe n’inaa y’ishami ry’umuryango w’abibumbye ryita ku buhinzi n’ibiribwa (FAO) mu nteko yayo ya 29 ugushyingo 1997, agashyirwa mu bikorwa tariki ya 02 ukwakira 2005, kandi akaba akubiyemo n’ibyahinduwe byashyizwe mu bikorwa.
 
 [[Category:Imiryango]] 
-[[Category:Ibimera]]   
+[[Category:Ibimera]]
 
 [[de:Internationales Pflanzenschutzübereinkommen]]
+[[en:International Plant Protection Convention]]
 [[fr:Convention internationale pour la protection des végétaux]]
 [[lt:Tarptautinė augalų apsaugos konvencija]]
 [[pl:IPPC (choroby roślin)]]
