--- a/ISO_4217.mw
+++ b/ISO_4217.mw
@@ -376,3 +376,74 @@
 == Obsolete currency codes ==
 
 [[Category:Ubukungu]]
+
+[[af:ISO 4217]]
+[[ar:أيزو 4217]]
+[[ast:ISO 4217]]
+[[az:ISO 4217]]
+[[bn:আইএসও ৪২১৭]]
+[[be:ISO 4217]]
+[[be-x-old:ISO 4217]]
+[[bs:ISO 4217]]
+[[br:ISO 4217]]
+[[bg:ISO 4217]]
+[[ca:ISO 4217]]
+[[cv:ISO 4217]]
+[[cy:ISO 4217]]
+[[da:ISO 4217]]
+[[de:ISO 4217]]
+[[el:ISO 4217]]
+[[en:ISO 4217]]
+[[es:ISO 4217]]
+[[eo:ISO 4217]]
+[[eu:ISO 4217]]
+[[fa:ایزو ۴۲۱۷]]
+[[fr:Codes ISO 4217 des monnaies]]
+[[gv:ISO 4217]]
+[[gl:ISO 4217]]
+[[ko:ISO 4217]]
+[[hi:आईएसओ ४२१७]]
+[[hr:ISO 4217]]
+[[id:ISO 4217]]
+[[is:ISO 4217]]
+[[it:ISO 4217]]
+[[he:ISO 4217]]
+[[jv:ISO 4217]]
+[[sw:ISO 4217]]
+[[ku:ISO 4217]]
+[[lv:ISO 4217]]
+[[lt:ISO 4217]]
+[[li:ISO 4217]]
+[[hu:ISO 4217]]
+[[ms:ISO 4217]]
+[[nl:ISO 4217]]
+[[nds-nl:ISO 4217]]
+[[ja:ISO 4217]]
+[[no:ISO 4217]]
+[[nn:ISO 4217]]
+[[nov:ISO 4217]]
+[[oc:ISO 4217]]
+[[uz:ISO 4217]]
+[[nds:ISO 4217]]
+[[pl:ISO 4217]]
+[[pt:ISO 4217]]
+[[ro:ISO 4217]]
+[[ru:ISO 4217]]
+[[sah:ISO 4217]]
+[[simple:ISO 4217]]
+[[sk:ISO 4217]]
+[[cu:ISO 4217]]
+[[sl:ISO 4217]]
+[[sr:ИСО 4217 стандард]]
+[[fi:ISO 4217]]
+[[sv:ISO 4217]]
+[[tl:ISO 4217]]
+[[ta:ஐ.எசு.ஓ 4217]]
+[[th:ISO 4217]]
+[[tg:ISO 4217]]
+[[tr:ISO 4217]]
+[[uk:Класифікація валют]]
+[[ur:ISO 4217]]
+[[vi:ISO 4217]]
+[[yo:ISO 4217]]
+[[zh:ISO 4217]]
