--- a/ISO_4217.mw
+++ b/ISO_4217.mw
@@ -22,7 +22,7 @@
 |-
 | AFN || 971 || [[Afugani ]] || [[Afuganisitani]]
 |-
-| ALL || 008 || . || [[Alubaniya]]
+| ALL || 008 || [[Ileki rya Alubaniya]] || [[Alubaniya]]
 |-
 | AMD || 051 || [[Idiramu rya Arumeniya]] || [[Arumeniya]]
 |-
