--- a/ISO_4217.mw
+++ b/ISO_4217.mw
@@ -16,7 +16,7 @@
 
 {| class="wikitable sortable"
 |-
-! Code !! umubare !! Currency !! ibihugu
+! Code !! umubare !! faranga rizamo !! ibihugu
 |-
 | AED || 784 || [[Idiramu UAE]] || [[Nyarabu Zunze Ubumwe]]
 |-
