--- a/ISO_4217.mw
+++ b/ISO_4217.mw
@@ -296,7 +296,7 @@
 |-
 | TJS || 972 || [[Isomoni rya Tajiki]] || [[Tajikisitani]]
 |-
-| TMT || 934 || . || [[Turikimenisitani]]
+| TMT || 934 || [[Imanati rya Turikimenisitani]] || [[Turikimenisitani]]
 |-
 | TND || 788 || [[Idenari rya Tunisiya]] || [[Tunisiya]]
 |-
