*Empty MediaWiki Message*

--- a/ISO_4217.mw
+++ b/ISO_4217.mw
@@ -78,7 +78,7 @@
 |-
 | CHF || 756 || [[Ifaranga ry’Ubusuwisi]] || [[Ubusuwisi]], [[Liyeshitensiteyine]]
 |-
-| CHW || 948 || || [[Ubusuwisi]]
+| CHW || 948 || . || [[Ubusuwisi]]
 |-
 | CLF || 990 || [[Unidadesi ya fomento]] || [[Shili]]
 |-
@@ -110,7 +110,7 @@
 |-
 | EGP || 818 || [[Ipawundi rya Misiri]] || [[Misiri]]
 |-
-| ERN || 232 || [[Nakfa rya Eritereya]] || [[Eritereya]]
+| ERN || 232 || [[Nakfa rya Eritereya]] cyangwa [[Inakifa rya Eritereya]]|| [[Eritereya]]
 |-
 | ETB || 230 || [[Ibiri rya Etiyopiya]] || [[Etiyopiya]]
 |-
@@ -122,9 +122,9 @@
 |-
 | GBP || 826 || [[Ipawundi Siterilingi]] || [[Ubwongereza]], ([[Geworugiya y’Epfo n’Ibirwa bya Sanduwice y’Epfo]])
 |-
-| GEL || 981 || . || [[Geworigiya]]   
+| GEL || 981 || [[Ilari Geworugiya]] || [[Geworigiya]]   
 |-
-| GHS || 936 || . || [[Gana]]
+| GHS || 936 || [[Isedi rya Gana]] || [[Gana]]
 |-
 | GIP || 292 || [[Ipawundi rya Giburalitari]] || [[Giburalitari]]
 |-
@@ -132,7 +132,7 @@
 |-
 | GNF || 324 || [[Ifaranga rya Gineya]] || [[Gineya]]
 |-
-| GTQ || 320 || . || [[Gwatemala]]
+| GTQ || 320 || [[Ikwetsali rya Gwatemala]] || [[Gwatemala]]
 |-
 | GYD || 328 || [[Idolari rya Guyana]] || [[Giyana]]
 |-
@@ -326,9 +326,9 @@
 |-
 | VEF || 937 || [[Ibolivari rya Venezuwela]] || [[Venezuwela]]
 |-
-| VND || 704 || . || [[Viyetinamu]]
+| VND || 704 || [[Idongi rya Viyetinamu]] || [[Viyetinamu]]
 |-
-| VUV || 548 || . || [[Vanuwatu]]
+| VUV || 548 || [[Ivatu rya Vatuwana]] || [[Vanuwatu]]
 |-
 | WST || 882 || [[Itala rya Samowani]] || [[Samowa y’Uburengerazuba]]
 |-
