--- a/ISO_4217.mw
+++ b/ISO_4217.mw
@@ -230,7 +230,7 @@
 |-
 | NAD || 516 || [[Idolari rya Namibiya]] || [[Namibiya]]
 |-
-| NGN || 566 || [[Izayire]] || [[Nigeriya]]
+| NGN || 566 || [[Inayira rya Nigeriya]] || [[Nigeriya]]
 |-
 | NIO || 558 || [[Ikorudoba Oro rya Nikaragwa]] || [[Nikaragwa]]
 |-
@@ -242,11 +242,11 @@
 |-
 | OMR || 512 || [[Iriyali rya Omani]] || [[Omani]]
 |-
-| PAB || 590 || . || [[Panama]]
+| PAB || 590 || [[Ibalubowa rya Panama]] || [[Panama]]
 |-
 | PEN || 604 || [[Inuvo solu rya Peru]] || [[Peru]]
 |-
-| PGK || 598 || . || [[Papuwa Nuveli Gineya]]
+| PGK || 598 || [[Ikina rya Papuwa Gineya Nshya]] || [[Papuwa Nuveli Gineya]]
 |-
 | PHP || 608 || [[Ipezo rya Filipine]] || [[Filipine]]
 |-
@@ -254,7 +254,7 @@
 |-
 | PLN || 985 || [[Iziloti rya Polonye]] || [[Polonye]]
 |-
-| PYG || 600 || [[Ifaranga rya Gineya]] || [[Paragwe]]
+| PYG || 600 || [[Igwarani rya Paragwe]] || [[Paragwe]]
 |-
 | QAR || 634 || [[Iriyali rya Katari]] || [[Katari]]
 |-
@@ -286,7 +286,7 @@
 |-
 | SRD || 968 || [[Idolari rya Surinamu]] || [[Surinamu]]
 |-
-| STD || 678 || . || [[Sawo Tome na Purensipe]]
+| STD || 678 || [[Idobura rya Sawo Tome na Purensipe]] || [[Sawo Tome na Purensipe]]
 |-
 | SYP || 760 || [[Ipawundi rya Siriya]] || [[Siriya]]
 |-
@@ -310,7 +310,7 @@
 |-
 | TZS || 834 || [[Ishilingi rya Tanzaniya]] || [[Tanzaniya]]
 |-
-| UAH || 980 || . || [[Ikerene]]
+| UAH || 980 || [[Ihariviniya rya Ukerene]] || [[Ikerene]]
 |-
 | UGX || 800 || [[Ishilingi rya Uganda]] || [[Yuganda]]
 |-
@@ -338,13 +338,13 @@
 |-
 | XAU || 959 || [[Zahabu]] ||
 |-
-| XBA || 955 || [[Urugero Rukomatanije Nyaburayi]] (EURCO) ||
+| XBA || 955 || [[Urugero Rukomatanije Nyaburayi]] (EURCO) (Ingero z’Amasoko ya Bo) ||
 |-
-| XBB || 956 || [[Urugero rw’Ifaranga ry’Iburayi]] (E.M.U.-6) ||
+| XBB || 956 || [[Urugero rw’Ifaranga ry’Iburayi]] (E.M.U.-6) (Ingero z’Amasoko ya Bo) ||
 |-
-| XBC || 957 || [[Urugero rwa konte Nyaburayi]] (E.U.A.-9) ||
+| XBC || 957 || [[Urugero rwa konte Nyaburayi]] (E.U.A.-9) (Ingero z’Amasoko ya Bo) ||
 |-
-| XBD || 958 || [[Urugero rwa konte Nyaburayi]] (E.U.A.-17) ||
+| XBD || 958 || [[Urugero rwa konte Nyaburayi]] (E.U.A.-17) (Ingero z’Amasoko ya Bo) ||
 |-
 | XCD || 951 || [[Idolari rya Karayibe y’Uburasirazuba]] || [[Angwiya]], [[Antigwa na Baribuda]], [[Dominika]], [[Gerenada]], [[Monserati]], [[Mutagatifu Kitsi na Nevisi]], [[Mutagatifu Lusiya (Leta)|Mutagatifu Lusiya]], [[Mutagatifu Visenti na Gerenadine]]
 |-
@@ -516,7 +516,7 @@
 |-
 | RUR || 810 || [Irubule ry’Uburusiya]] || 1992 || 1997-12-31 || RUB 
 |-
-| SDD || 736 || . || 1992-06-08 || 2007-01-10 || SDG 
+| SDD || 736 || [[Idenari rya Sudani]] || 1992-06-08 || 2007-01-10 || SDG 
 |-
 | SRG || 740 || [[Igwilida rya Suriname]] || ? || 2004 || SRD 
 |-
