--- a/ISO_4217.mw
+++ b/ISO_4217.mw
@@ -464,7 +464,7 @@
 |-
 | CSD || 891 || [[Idenari rya Seribiya]] || 2003-07-03 || 2006 || RSD 
 |-
-| CSK || 200 || [[Ikorona A/53 rya Cekosilovakiya]] || ? || 1993-02-08 || CZK na SKK 
+| CSK || 200 || [[Ikorona rya Cekosilovakiya]] || ? || 1993-02-08 || CZK na SKK 
 |-
 | DDM || 278 || [[Imarike rya DDR]] || 1948-06-21 || 1990-07-01 || DEM 
 |-
@@ -569,6 +569,32 @@
 | ZWR || 935 || [[Idolari rya Zimbabwe]] A/09 || 2008-08-01 || 2009-02-02 || ZWL 
 |}
 
+== ==
+*ALK Ileki Ishaje y’Alubaniya  (Albanian Old Lek)
+*AOK Ikwanza Lishya ry’Angola  (Angolan New Kwanza) 
+*BAD Idenari rya Bosiniya na Herizegovina  (Bosnia and Herzegovina Dinar)
+*BEC Ifaranga Rihindurwa ry’Ububiligi  (Belgian Franc Convertible)
+*BEL Ifaranga Mutungo ry’Ububiligi  (Belgian Franc Financial)
+*BGJ Ilevi A/52 rya Bulugariya  (Bulgarian Lev A/52)
+*BGK Ilevi A/62 rya Bulugariya  (Bulgarian Lev A/62)
+*BYB Irubule rya Belarusi  (Belarussian Rouble)
+*CNX Idolari rya Banki y’Abaturage b’Ubushinwa  (Chinese Peoples Bank Dollar)
+*CSJ Ikoruna A/53 rya Cekosilovakiya  (Czechoslovak Krona A/53)
+*GEK Ikupo rya Geworugiya  (Georgian Coupon )
+*GWE Esikudo rya Gineya  (Guinea Escudo)
+*HRD Idenari rya Korowasiya  (Croatian Dinar)
+*LSM Imaloti rya Lesoto  (Lesotho Maloti)
+*LTT Italonasi rya Lituwani  (Lithuanian Talonas)
+*LUC Ifaranga Rihindurwa rya Lugizamburu (Luxembourg Convertible Franc)
+*LUL Ifaranga Mutungo rya Lugizamburu  (Luxembourg Financial Franc)
+*LVR Irubule rya Lativiya  (Latvian Ruble)
+*MTP Maltese Pound  (Ipawundi rya Malite)
+*MZE Esikudo rya Mozambike  (Mozambique Escudo)
+*NIC Ikorudoba rya Nikaragwa  (Nicaraguan Cordoba)
+*RHD Idolari rya Rodesiya   (Rhodesian Dollar)
+*TLE (Esikudo rya Timoro  (Timor Escudo)
+*UGW Ishilingi Rishaje rya Yuganda  (Uganda Old Schilling)
+*VNC Idongi Rishaje ya Viyetinamu  (Viet Nam Old Dong)
 
 [[Category:Ubukungu]]
 
