*Empty MediaWiki Message*

--- a/Igiturukimeni.mw
+++ b/Igiturukimeni.mw
@@ -1,3 +1,3 @@
-'''Igiturukimeni''' (izina mu igiturukimeni : ''türkmençe'' cyangwa ''türkmen dili'' )
+'''Igiturukimeni''' (izina mu igiturukimeni : ''türkmençe'' cyangwa ''türkmen dili'' ) ni [[ururimi]] rwa [[Turikimenisitani]]. 
 
 [[Category:Indimi z’ikinyaturukiya]]
