*Empty MediaWiki Message*

--- a/Igiturukimeni.mw
+++ b/Igiturukimeni.mw
@@ -1,3 +1,62 @@
 '''Igiturukimeni''' (izina mu igiturukimeni : ''türkmençe'' cyangwa ''türkmen dili'' ) ni [[ururimi]] rwa [[Turikimenisitani]]. 
 
 [[Category:Indimi z’ikinyaturukiya]]
+
+[[am:ቱርክመንኛ]]
+[[ast:Turcomanu]]
+[[az:Türkmən dili]]
+[[bn:তুর্কমেনীয় ভাষা]]
+[[ba:Төрөкмән теле]]
+[[be:Туркменская мова]]
+[[be-x-old:Туркмэнская мова]]
+[[br:Turkmeneg]]
+[[bg:Туркменски език]]
+[[ca:Turcman]]
+[[cv:Турккăлла чĕлхи]]
+[[cs:Turkmenština]]
+[[da:Turkmensk (sprog)]]
+[[de:Turkmenische Sprache]]
+[[es:Idioma turcomano]]
+[[eo:Turkmena lingvo]]
+[[fa:زبان ترکمنی]]
+[[fr:Turkmène]]
+[[ga:An Tuircméinis]]
+[[gag:Türkmen dili]]
+[[ko:투르크멘어]]
+[[hi:तुर्कमेन भाषा]]
+[[hr:Turkmenski jezik]]
+[[id:Bahasa Turkmen]]
+[[it:Lingua turkmena]]
+[[kn:ತುರ್ಕ್‌ಮೇನಿಸ್ತಾನ್‌ನ ಭಾಷೆ]]
+[[ka:თურქმენული ენა]]
+[[kk:Түрікмен тілі]]
+[[la:Lingua Turcomannica]]
+[[lt:Turkmėnų kalba]]
+[[mk:Туркменски јазик]]
+[[mr:तुर्कमेन भाषा]]
+[[ms:Bahasa Turkmen]]
+[[nl:Turkmeens]]
+[[ja:トルクメン語]]
+[[no:Turkmensk]]
+[[pnb:ترکمن بولی]]
+[[pms:Lenga turkmen-a]]
+[[pl:Język turkmeński]]
+[[pt:Língua turcomena]]
+[[ro:Limba turkmenă]]
+[[qu:Turkmin simi]]
+[[ru:Туркменский язык]]
+[[sco:Turkmen leid]]
+[[sk:Turkménčina]]
+[[sr:Туркменски језик]]
+[[fi:Turkmeenin kieli]]
+[[sv:Turkmeniska]]
+[[ta:துருக்குமேனிய மொழி]]
+[[tt:Төрекмән теле]]
+[[th:ภาษาเติร์กเมน]]
+[[tg:Забони туркменӣ]]
+[[tr:Türkmence]]
+[[tk:Türkmen dili]]
+[[uk:Туркменська мова]]
+[[ug:تۈركمەن تىلى]]
+[[yo:Èdè Turkmẹ́nì]]
+[[zh:土库曼语]]
