--- a/Igiturukimeni.mw
+++ b/Igiturukimeni.mw
@@ -1,5 +1,19 @@
 '''Igiturukimeni''' (izina mu igiturukimeni : ''türkmençe'' cyangwa ''türkmen dili'' ) ni [[ururimi]] rwa [[Turikimenisitani]]. 
 
+== Alfabeti y’igiturukimeni ==
+<center>
+{|class="wikitable" style="border-collapse:collapse;"
+|-
+|bgcolor="#EFEFEF" align="center" colspan="29" | 
+|-
+|width=3% align="center"|[[A]]||width=3% align="center"|[[B]]||width=3% align="center"|[[Ç]]||width=3% align="center"|[[D]]||width=3% align="center"|[[E]]||width=3% align="center"|[[Ä]]||width=3% align="center"|[[F]]||width=3% align="center"|[[G]]||width=3% align="center"|[[H]]||width=3% align="center"|[[I]]||width=3% align="center"|[[J]]||width=3% align="center"|[[Ž]]||width=3% align="center"|[[K]]||width=3% align="center"|[[L]]||width=3% align="center"|[[M]]||width=3% align="center"|[[N]]||width=3% align="center"|[[Ň]]||width=3% align="center"|[[O]]||width=3% align="center"|[[Ö]]||width=3% align="center"|[[P]]||width=3% align="center"|[[R]]||width=3% align="center"|[[S]]||width=3% align="center"|[[Ş]]||width=3% align="center"|[[T]]||width=3% align="center"|[[U]]||width=3% align="center"|[[Ü]]||width=3% align="center"|[[W]]||width=3% align="center"|[[Y]]||width=3% align="center"|[[Ý]]||width=3% align="center"|[[Z]]
+|-
+|bgcolor="#EFEFEF" align="center" colspan="29" | 
+|-
+|align="center"|a||align="center"|b||align="center"|ç||align="center"|d||align="center"|e||align="center"|ä||align="center"|f||align="center"|g||align="center"|h||align="center"|i||align="center"|j||align="center"|ž||align="center"|k||align="center"|l||align="center"|m||align="center"|n||align="center"|ň||align="center"|o||align="center"|ö||align="center"|p||align="center"|r||align="center"|s||align="center"|ş||align="center"|t||align="center"|u||align="center"|ü||align="center"|w||align="center"|y||align="center"|ý||align="center"|z
+|}
+</center>
+
 [[Category:Indimi z’ikinyaturukiya]]
 
 [[am:ቱርክመንኛ]]
