*Empty MediaWiki Message*

--- a/Igiturukimeni.mw
+++ b/Igiturukimeni.mw
@@ -1,4 +1,4 @@
-'''Igiturukimeni''' (izina mu igiturukimeni : ''türkmençe'' cyangwa ''türkmen dili'' ) ni [[ururimi]] rwa [[Turikimenisitani]]. 
+'''Igiturukimeni''' (izina mu igiturukimeni : ''türkmençe'' cyangwa ''türkmen dili'' ) ni [[ururimi]] rwa [[Turikimenisitani]] n’[[Afuganisitani]]. 
 
 == Alfabeti y’igiturukimeni ==
 <center>
