*Empty MediaWiki Message*

--- a/Igiturukimeni.mw
+++ b/Igiturukimeni.mw
@@ -1,5 +1,19 @@
 '''Igiturukimeni''' (izina mu igiturukimeni : ''türkmençe'' cyangwa ''türkmen dili'' ) ni [[ururimi]] rwa [[Turikimenisitani]] n’[[Afuganisitani]]. 
 
+== Amagambo n'interuro mu giturukimeni ==
+*'''Siz iňlisçe gepleýärsiňizmi?''' – Uvuga icyongereza?
+*'''Hawa''' – Yego
+*'''Ýok''' – Oya
+*'''bir''' – rimwe
+*'''iki''' – kabiri
+*'''üç''' – gatatu
+*'''dört''' – kane
+*'''bäş''' – gatanu
+*'''alty''' – gatandatu
+*'''ýedi''' – karindwi
+*'''sekiz''' – umunani
+*'''dokuz''' – icyenda
+
 == Alfabeti y’igiturukimeni ==
 <center>
 {|class="wikitable" style="border-collapse:collapse;"
