*Empty MediaWiki Message*

--- a/ISO_3166-1.mw
+++ b/ISO_3166-1.mw
@@ -218,7 +218,7 @@ Urutonde rw’ibihugu ISO 3166-1
 * TK [[Tokelawu]]
 * TO [[Tonga]]
 * TN [[Tunisiya]]
-* TM [[Turikimenisitani]]
+* TM [[Turukimenisitani]] cyangwa [[Turikimenisitani]]
 * TR [[Turukiya]]
 * TV [[Tuvalu]]
 * BE [[Ububiligi]]
