*Empty MediaWiki Message*

--- a/Turukimenisitani.mw
+++ b/Turukimenisitani.mw
@@ -1,7 +1,7 @@
 [[File:Flag of Turkmenistan.svg|thumb|250px|<font color="grey">Ibendera rya Turukimenisitani</font>]]
 [[File:LocationTurkmenistan.svg|thumb|250px|<font color="grey">Ikarita ya Turukimenisitani</font>]]
 
-'''Turukimenisitani''' cyangwa '''Turikimenisitani''' n’[[igihugu]] muri [[Aziya]].
+'''Turukimenisitani''' cyangwa '''Turikimenisitani''' (izina mu [[giturukimeni]] : ''Türkmenistan'' ) n’[[igihugu]] muri [[Aziya]].
  
 [[Category:Aziya]]
 [[Category:Ibihugu]]
