--- a/Igiturukimeni.mw
+++ b/Igiturukimeni.mw
@@ -1,4 +1,4 @@
-'''Igiturukimeni''' (izina mu igiturukimeni : ''türkmençe'' cyangwa ''türkmen dili'' ) ni [[ururimi]] rwa [[Turikimenisitani]] n’[[Afuganisitani]]. 
+'''Igiturukimeni''' (izina mu giturukimeni : ''türkmençe'' cyangwa ''türkmen dili'' ) ni [[ururimi]] rwa [[Turikimenisitani]] n’[[Afuganisitani]]. 
 
 == Amagambo n'interuro mu giturukimeni ==
 *'''Siz iňlisçe gepleýärsiňizmi?''' – Uvuga icyongereza?
