--- a/ISO_4217.mw
+++ b/ISO_4217.mw
@@ -592,7 +592,7 @@
 *MZE Esikudo rya Mozambike  (Mozambique Escudo)
 *NIC Ikorudoba rya Nikaragwa  (Nicaraguan Cordoba)
 *RHD Idolari rya Rodesiya   (Rhodesian Dollar)
-*TLE (Esikudo rya Timoro  (Timor Escudo)
+*TLE Esikudo rya Timoro  (Timor Escudo)
 *UGW Ishilingi Rishaje rya Yuganda  (Uganda Old Schilling)
 *VNC Idongi Rishaje ya Viyetinamu  (Viet Nam Old Dong)
 
