*Empty MediaWiki Message*

--- a/Alubaniya.mw
+++ b/Alubaniya.mw
@@ -5,3 +5,196 @@
 
 [[Category:Uburayi]]
 [[Category:Ibihugu]]
+
+[[ace:Albania]]
+[[af:Albanië]]
+[[als:Albanien]]
+[[am:አልባኒያ]]
+[[ang:Albania]]
+[[ab:Арнауыҭтәыла]]
+[[ar:ألبانيا]]
+[[an:Albania]]
+[[arc:ܐܠܒܢܝܐ]]
+[[roa-rup:Arbinishia]]
+[[frp:Albanie]]
+[[ast:Albania]]
+[[gn:Avaña]]
+[[az:Albaniya]]
+[[bn:আলবেনিয়া]]
+[[zh-min-nan:Shqipëria]]
+[[be:Албанія]]
+[[be-x-old:Альбанія]]
+[[bcl:Albanya]]
+[[bi:Albania]]
+[[bar:Albanien]]
+[[bo:ཨལ་པ་ཉི་ཡ།]]
+[[bs:Albanija]]
+[[br:Albania]]
+[[bg:Албания]]
+[[ca:Albània]]
+[[cv:Албани]]
+[[ceb:Albanya]]
+[[cs:Albánie]]
+[[co:Albania]]
+[[cy:Albania]]
+[[da:Albanien]]
+[[pdc:Albaani]]
+[[de:Albanien]]
+[[dv:އަލްބޭނިއާ]]
+[[nv:Dziłigaii Bikéyah]]
+[[dsb:Albańska]]
+[[dz:ཨལ་བཱ་ནི་ཡ།]]
+[[et:Albaania]]
+[[el:Αλβανία]]
+[[eml:Albanî]]
+[[es:Albania]]
+[[eo:Albanio]]
+[[ext:Albánia]]
+[[eu:Albania]]
+[[ee:Albania]]
+[[fa:آلبانی]]
+[[hif:Albania]]
+[[fo:Albania]]
+[[fr:Albanie]]
+[[fy:Albaanje]]
+[[fur:Albanie]]
+[[ga:An Albáin]]
+[[gv:Yn Albaan]]
+[[gd:Albàinia]]
+[[gl:Albania - Shqipëria]]
+[[gag:Albaniya]]
+[[hak:Â-ngì-pâ-nì-â]]
+[[xal:Арнгудин Орн]]
+[[ko:알바니아]]
+[[haw:ʻAlepania]]
+[[hy:Ալբանիա]]
+[[hi:अल्बानिया]]
+[[hsb:Albanska]]
+[[hr:Albanija]]
+[[io:Albania]]
+[[ilo:Albania]]
+[[bpy:আলবেনিয়া]]
+[[id:Albania]]
+[[ia:Albania]]
+[[ie:Albania]]
+[[os:Албани]]
+[[is:Albanía]]
+[[it:Albania]]
+[[he:אלבניה]]
+[[jv:Albania]]
+[[kl:Albania]]
+[[kn:ಅಲ್ಬೇನಿಯ]]
+[[pam:Albania]]
+[[ka:ალბანეთი]]
+[[csb:Albańskô]]
+[[kk:Албания]]
+[[kw:Albani]]
+[[ky:Албания]]
+[[sw:Albania]]
+[[kv:Албания]]
+[[kg:Albania]]
+[[ht:Albani]]
+[[ku:Albanya]]
+[[koi:Штиприя]]
+[[lad:אלבאניה]]
+[[krc:Албания]]
+[[la:Albania]]
+[[lv:Albānija]]
+[[lb:Albanien]]
+[[lt:Albanija]]
+[[lij:Albania]]
+[[li:Albanië]]
+[[ln:Albania]]
+[[lmo:Albania]]
+[[hu:Albánia]]
+[[mk:Албанија]]
+[[mg:Albania]]
+[[ml:അൽബേനിയ]]
+[[mt:Albanija]]
+[[mi:Arapeinia]]
+[[mr:आल्बेनिया]]
+[[arz:ألبانيا]]
+[[mzn:آلباني]]
+[[ms:Albania]]
+[[mn:Албани]]
+[[my:အယ်လ်ဘေးနီးယား]]
+[[mrj:Албани]]
+[[nah:Albania]]
+[[na:Albania]]
+[[nl:Albanië]]
+[[ne:अल्बानिया]]
+[[ja:アルバニア]]
+[[ce:Албани]]
+[[pih:Elbanya]]
+[[no:Albania]]
+[[nn:Albania]]
+[[nov:Albania]]
+[[oc:Albania]]
+[[uz:Albaniya]]
+[[pnb:البانیا]]
+[[pap:Albania]]
+[[ps:البانيا]]
+[[km:អាល់បានី]]
+[[pms:Albanìa]]
+[[tpi:Albenia]]
+[[nds:Albanien]]
+[[pl:Albania]]
+[[pnt:Αλβανία]]
+[[pt:Albânia]]
+[[kaa:Albaniya]]
+[[crh:Arnavutlıq]]
+[[ro:Albania]]
+[[rmy:Shkiperiya]]
+[[rm:Albania]]
+[[qu:Albanya]]
+[[ru:Албания]]
+[[sah:Албания]]
+[[se:Albánia]]
+[[sa:अल्बानिया]]
+[[sc:Albania]]
+[[sco:Albanie]]
+[[stq:Albanien]]
+[[sq:Shqipëria]]
+[[scn:Albanìa]]
+[[simple:Albania]]
+[[ss:I-Alibheniya]]
+[[sk:Albánsko]]
+[[cu:Алвані́ꙗ]]
+[[sl:Albanija]]
+[[szl:Albańijo]]
+[[so:Albania]]
+[[ckb:ئەڵبانیا]]
+[[srn:Albanikondre]]
+[[sr:Албанија]]
+[[sh:Albanija]]
+[[su:Albania]]
+[[fi:Albania]]
+[[sv:Albanien]]
+[[tl:Albanya]]
+[[ta:அல்பேனியா]]
+[[tt:Албания]]
+[[te:అల్బేనియా]]
+[[tet:Albánia]]
+[[th:ประเทศแอลเบเนีย]]
+[[tg:Албания]]
+[[chr:ᎠᎸᏇᏂᏯ]]
+[[tr:Arnavutluk]]
+[[tk:Albaniýa]]
+[[udm:Албания]]
+[[uk:Албанія]]
+[[ur:البانیا]]
+[[ug:ئالبانىيە]]
+[[vec:Albania]]
+[[vi:Albania]]
+[[vo:Lalbanän]]
+[[fiu-vro:Albaania]]
+[[war:Albanya]]
+[[wo:Albaani]]
+[[wuu:阿尔巴尼亚]]
+[[yi:אלבאניע]]
+[[yo:Albáníà]]
+[[zh-yue:阿爾巴尼亞]]
+[[diq:Arnawutiye]]
+[[zea:Albanië]]
+[[bat-smg:Albanėjė]]
+[[zh:阿尔巴尼亚]]
