*Empty MediaWiki Message*

--- a/Alubaniya.mw
+++ b/Alubaniya.mw
@@ -1,7 +1,7 @@
 [[File:Flag of Albania.svg|thumb|250px|<font color="grey">Ibendera ry’Alubaniya</font>]]
 [[File:Europe-Albania.svg|thumb|250px|<font color="grey">Ikarita y’Alubaniya</font>]]
 
-'''Alubaniya''' cyangwa '''Repebulika y’Alubaniya''' (izina mu [[kinyalubaniya]] : ''Shqipëria'' ) n’[[igihugu]] muri [[Uburayi]].
+'''Alubaniya''' cyangwa '''Repebulika y’Alubaniya''' (izina mu [[kinyalubaniya]] : ''Shqipëria'' cyangwa ''Republika e Shqipërisë'') n’[[igihugu]] muri [[Uburayi]].
 
 [[Category:Uburayi]]
 [[Category:Ibihugu]]
