*Empty MediaWiki Message*

--- a/ISO_3166-1.mw
+++ b/ISO_3166-1.mw
@@ -1,11 +1,11 @@
 Urutonde rw’ibihugu ISO 3166-1
 
-* AF [[Afuganisitani]]
-* ZA [[Afurika y’Epfo]]
-* DZ [[Aligeriya]]
-* AL [[Alubaniya]]
-* AD [[Andora]]
-* AO [[Angola]]
+* '''AF''' [[Afuganisitani]]
+* '''ZA''' [[Afurika y’Epfo]]
+* '''DZ''' [[Aligeriya]]
+* '''AL''' [[Alubaniya]]
+* '''AD''' [[Andora]]
+* '''AO''' [[Angola]]
 * AI [[Angwiya]]
 * AQ [[Antarigitika]]
 * AG [[Antigwa na Baribuda]]
